<resources>
    <string name="app_name">chapter05</string>
    <string name="phone_number">手机号码:</string>
    <string name="captcha_login">验证码登录</string>
    <string name="login_password">登录密码:</string>
    <string name="password_login">密码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="access_authentication_code">获取验证码</string>
    <string name="captcha">&#160; &#160; &#160; &#160;验证码:</string>
    <string name="enter_new_password">输入新密码:</string>
    <string name="confirm_password">确认新密码:</string>
    <string name="done">确定</string>
    <string name="login">登录</string>
</resources>